Update PlatformManager.java