@@ -5,15 +5,13 @@ import dinojump.util.Platform;
 import dinojump.util.Position;
 import dinojump.util.Skin;
 
-import java.util.LinkedList;
-import java.util.List;
 import java.util.Random;
 
 public class PlatformManager
 {
     public static PlatformManager instance;
 
-    private final List<Platform> platforms = new LinkedList<>();
+    private final List platforms = new List();
     private final Skin platformSkin = Skin.of(1);
 
     private final int rows;
@@ -41,12 +39,12 @@ public class PlatformManager
             platform.iterateLoop();
         }
 
-        Platform firstPlatform = platforms.get(0);
+        Platform firstPlatform = platforms.getFirst();
         // If there is a platform which is outside the playable area it gets deleted
         if (firstPlatform.getPosition().getY() < 0)
         {
-            platforms.remove(firstPlatform);
-            platforms.add(firstPlatform);
+            platforms.removeFirst();
+            platforms.insertLast(firstPlatform);
         }
         firstPlatform.getPosition().setY(rows + 2);
     }
@@ -58,7 +56,7 @@ public class PlatformManager
         int currentY = distance;
         for (int i = 0; i < amount; i++)
         {
-            platforms.add(new Platform(platformSkin, new Position(random.nextInt(columns), currentY)));
+            platforms.insertLast(new Platform(platformSkin, new Position(random.nextInt(columns), currentY)));
             currentY += distance;
         }
     }
